create amusement park site with 3 rides

--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,15 @@
 
 
 
+
 /*Class Selectors********************/
 
 
 
 /*Id Selectors***********************/
 
-
+#rides {
+  display: none;
+}
 
 /*Media Queries**********************/
